# Analytics-iCount-People

./: .dockerignore  .env  .env.example  .env_template  .gitignore  .promt  Dockerfile  Model.mwb  README.md  analytics  analytics.duckdb  check_drivers.py  cli.py  config.py  dashboard.py  dashboard2.html  database.py  dataset.py  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  etl_master.py  etl_master_script.py  etl_parquet_script.py  etl_script.py  etl_state.json  logger.yaml  logging.yaml  main.py  main_etl.py  mockup_page.py  mockups.py  models.py  openssl.cnf  promt.txt  pyproject.toml  refesh_data.py  requirements.txt  run.bat  (+6 more)
.streamlit/: config.toml  config.yaml  secrets.toml
___trash___/services/: analytics_service.py
___trash___/templates/: dashboard.html  dashboard2.html
__trash2__/: database.py
__trash2__/.streamlit/: secrets.toml
__trash2__/assets/: style.css
__trash__/: .env.example  Google Gemini.html  README.md  database.py  etl_script.py  etl_script2.py  main.py  models.py  project_structure.txt  project_structure2.txt  promt.txt  requirements.txt  services.py  so_do_du_an.txt  tables_database_mssql.txt  temp.txt  time_offsets.csv  timezones.csv
__trash__/__temp__/: models.py  services.py
__trash__/__trash__/: database2.py
__trash__/app/: README.md  crud.py  main.py  main1.py  main2.py  main_old.py  models.py  routers.py  schemas.py  services.py
__trash__/app2/: main.py  models.py
__trash__/core/: data_handler.py
__trash__/frontend/: package-lock.json
__trash__/schemas/: __init__.py  analytics.py  errors.py
__trash__/scripts/: check_env.py  run_etl.py
__trash__/services/: analytics_service.py
__trash__/templates2/: dashboard.html  index.html
app/: cli.py  config.py  crud.py  database.py  database2.py  dependencies.py  logger.yaml  main.py  model.py  models.py  routers.py  schemas.py  security.py  services.py  test_.txt
app/api/: dependencies.py  deps.py
app/core/: __init__.py  caching.py  config.py  data_handler.py  database.py  db.py  dependencies.py  logging_utils.py  security.py
app/db/: base.py  session.py
app/etl/: __init__.py  extract.py  load.py  schemas.py  state.py  transform.py
app/routers/: auth.py  crowd.py  dashboard.py  store.py
app/routes/: auth.py  pages.py
app/schemas/: __init__.py  analytics.py  errors.py  store.py
app/services/: analytics_service.py
app/templates/: base.html  dashboard.html  dashboard1.html  dashboard3.html  index.html
app/utils/: logger.py  logger_config.py
backend/: requirements.txt
backend/__trash__/: main.py  models.py  schemas.py  services.py
configs/: logger.yaml  tables.yaml  time_offsets.yaml
data copy/: etl_state.json
data2/: etl_state.json
frontend/: package.json
icount-api/: .env  .gitignore  check_drivers.py  requirements.txt
pages/: 1_Daily Statistics.py  errLog.py
scripts/: run_etl.py
temp/: Camera.csv  Camera.feather  ErrLog.feather  Setting.csv  Setting.feather  Status.csv  Status.feather  Store.csv  Store.feather  User.csv  User.feather  models.mwb
template/: base.html  dashboard.html
templates/: base.html  dashboard.html  index.html
templates2/: base.html  dashboard.html
tools/: run_etl.py
utils/: logger_config.py
(+146 files in other folders)
