# ==============================================================================
# Build System Configuration (PEP 517)
# ==============================================================================
# Phần này là tiêu chuẩn, cho phép các công cụ như pip biết cách để build dự án của bạn.
# Poetry là một công cụ quản lý dependency và đóng gói hiện đại.
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# ==============================================================================
# Project Metadata (PEP 621)
# ==============================================================================
# Thông tin cơ bản về dự án của bạn.
[tool.poetry]
name = "analytics-icount-people"
version = "2.1.0"
description = "Hệ thống thống kê và phân tích lưu lượng người ra vào, xây dựng bằng FastAPI và DuckDB."
authors = ["Hunter Do <phongvu2010@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]


# ==============================================================================
# Main Dependencies
# ==============================================================================
# Các thư viện cần thiết để ứng dụng chạy trên môi trường production.
[tool.poetry.dependencies]
python = "^3.12"

# --- Web Framework & Server ---
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
jinja2 = "^3.1.3"       # Cần cho FastAPI Templating

# --- Data & Database ---
duckdb = "^0.10.0"
pandas = "^2.2.0"
pandera = "^0.18.0"
pyarrow = "^15.0.0"
sqlalchemy = "^2.0.27"
pyodbc = "^5.1.0"       # Driver cho MS SQL Server

# --- Utilities & Configuration ---
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dateutil = "^2.8.2"
PyYAML = "^6.0.1"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
tenacity = "^8.2.3"
cachetools = "^5.3.3"
python-json-logger = "^2.0.7"
typing-extensions = "^4.12.0"


# ==============================================================================
# Development Dependencies
# ==============================================================================
# Các thư viện chỉ dùng trong lúc phát triển, không cần thiết cho production.
# Chạy `poetry install --with dev` để cài đặt.
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"       # Framework để viết test
httpx = "^0.27.0"       # HTTP client để test API (thay thế requests trong test)
black = "^24.2.0"       # Tự động format code
ruff = "^0.2.2"         # Linter siêu nhanh
pre-commit = "^3.6.2"   # Chạy hooks trước khi commit (ví dụ: tự động format)


# ==============================================================================
# Tool Configurations
# ==============================================================================
# Cấu hình cho các công cụ phát triển ngay trong file này.
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP"    # pyupgrade
]
ignore = [
    "E501", # Line too long, handled by black
]
